BP-369 fix button text color on safari

--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -1,6 +1,6 @@
-@import './src/theme/pallete';
-@import './src/theme/functions';
-@import './src/theme/typography';
+@import "./src/theme/pallete";
+@import "./src/theme/functions";
+@import "./src/theme/typography";
 
 .button {
   display: flex;
@@ -11,12 +11,12 @@
   outline: none;
   @include text-14-b;
   padding: 8px 16px;
-  display: flex;
   align-items: center;
   transition: $transition;
   max-height: 45px;
   min-width: 80px;
   border-radius: $border_radius;
+  color: $black;
 
   &:not(.disabled):hover {
     transition: $transition;
